--- a/src/app/challenge/active-challenges/active-challenges.component.html
+++ b/src/app/challenge/active-challenges/active-challenges.component.html
@@ -14,34 +14,39 @@
 
         <!-- Active challenges -->
         <div class="tab-pane fade show active" id="active" role="tabpanel">
-          <ul class="list-group">
+          <ul class="list-group" *ngIf="(challengeList|async)?.length; else emptyChallengesTemplate">
             <li *ngFor="let challenge of challengeList | async" class="list-group-item text-center mb-2">
-              {{ challenge.challengerFullName }} fordert {{ challenge.challengedFullName }}
-              <p class="mb-0">
-                <small>Forderung aktiv seit dem
-                  <h6>
-                    <span class="badge badge-warning">{{ challenge.dateOfChallengeRequest }}</span>
-                  </h6>
-                </small>
-              </p>
+              <strong>{{ challenge.challengerFullName }}</strong> fordert <strong>{{ challenge.challengedFullName }}</strong> ({{ challenge.dateOfChallengeRequest }})
             </li>
           </ul>
         </div>
 
+        <ng-template #emptyChallengesTemplate>
+          <div class="list-group-item text-center">
+            Aktuell gibt es keine Forderungen.
+          </div>
+        </ng-template>
+
         <!-- Completed challenges -->
         <div class="tab-pane fade" id="completed" role="tabpanel">
-          <ul class="list-group">
+          <ul class="list-group" *ngIf="(completedChallenges|async)?.length; else emptyCompletedChallengesTemplate">
             <li *ngFor="let completed of completedChallenges | async" class="list-group-item text-center mb-2">
-                <span class="badge badge-success winner" *ngIf="completed.winner == completed.challenger">
-                  {{ completed.challenger }}</span>
+              <span class="badge badge-success winner" *ngIf="completed.winner == completed.challenger">
+                {{ completed.challenger }}</span>
               <span *ngIf="completed.winner != completed.challenger">{{ completed.challenger }}</span> hat
-                <span class="badge badge-success winner" *ngIf="completed.winner == completed.challengedPlayer">
-                  {{ completed.challengedPlayer }}</span>
+              <span class="badge badge-success winner" *ngIf="completed.winner == completed.challengedPlayer">
+                {{ completed.challengedPlayer }}</span>
               <span *ngIf="completed.winner != completed.challengedPlayer">{{ completed.challengedPlayer }}</span> am
               <span class="font-weight-bold">{{ completed.dateOfCompletion }}</span> gefordert.
             </li>
           </ul>
         </div>
+
+        <ng-template #emptyCompletedChallengesTemplate>
+            <div class="list-group-item text-center">
+                Hier gibt es noch keine Ergebnisse.
+              </div>
+        </ng-template>
 
       </div>
     </div>
